kernel/tests/invalid_data_declarations/constructor_parameter_level_too_high_1.ck
data Invalid : Type where
  | c : Type -> Invalid
